public class User 
{
    private String userId;
    
}